# BookmarksService

./: .env  .gitignore  README.md  docker-compose.yml  dotenv-example  pyproject.toml  requirements.txt
docker/api/: Dockerfile
src/api_auth/: admin.py  serializers.py  urls.py  views.py
src/api_auth/migrations/: 0001_initial.py
src/api_auth/models/: managers.py  models.py
src/bookmarks/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/bookmarks/migrations/: 0001_initial.py
src/project/: __init__.py  celery.py  settings.py  urls.py
